[package]
name = "evtx2bodyfile"
version = "0.2.0"
authors = ["Jan Starke <jan.starke@outofbed.org>"]
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evtx = "0.7.2"
#evtx = { git = "https://github.com/janstarke/evtx", branch="feature/visitor" }
anyhow = "1.0.40"
clap = "2.33"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
bodyfile = "0.1"
env_logger = "0.9"

[dependencies.simple_logger]
version = "1.11"
default-features = false
features = ["stderr", "colors"]