[package]
name = "evtx2bodyfile"
version = "1.0.0"
authors = ["Jan Starke <jan.starke@t-systems.com>"]
edition = "2021"
license = "GPL-3.0"
description = "Parses a lot of evtx files and prints a bodyfile"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evtx = "0.7.2"
anyhow = "1.0.40"
clap = {version = "3.2", features=["derive"]}
clap-verbosity-flag = {version="1.0.0"}
log = "0.4"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
bodyfile = "0.1"
env_logger = "0.9"
indicatif = "0.16.2"
simplelog = "0.12"