[package]
name = "evtx2bodyfile"
version = "1.1.0"
authors = ["Jan Starke <jan.starke@t-systems.com>"]
edition = "2021"
license = "GPL-3.0"
description = "Parses a lot of evtx files and prints a bodyfile"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evtx = "0.8"
anyhow = "1.0.40"
clap = {version = "4.0", features=["derive"]}
clap-verbosity-flag = {version="2.0.0"}
log = "0.4"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
bodyfile = "0.1"
env_logger = "0.9"
indicatif = "0.17"
simplelog = "0.12"
getset = "0.1"
ouroboros = "0.15"

es4forensics = {version = ">=0.3" }
# es4forensics = {version = "0", path="../elastic4forensics"}